# simple-googletest-cmake-sample

./: CMakeLists.txt  README.md
include/mylib/: CMakeLists.txt  ClassA.h  ClassB.h
src/: CMakeLists.txt
test/: CMakeLists.txt
